--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -28,6 +28,8 @@ services:
         DB_USER: ${DB_USER}
         DB_PASS: ${DB_PASS}
     container_name: mariadb
+    volumes:
+      - db-volume:/var/lib/mysql
     ports:
       - "3306:3306"
     networks:
