--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -1,4 +1,5 @@
 FROM debian:buster
 RUN apt update
 RUN apt upgrade
-RUN apt install nginx vim curl -y
+RUN apt install nginx vim curl openssl -y
+RUN mkdir -p /etc/nginx/ssl
