--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -6,3 +6,6 @@ RUN mkdir -p /etc/nginx/ssl
 RUN openssl req -x509 -nodes -out /etc/nginx/ssl/inception.crt -keyout /etc/nginx/ssl/inception.key -subj "/C=BR/ST=RJ/L=RJ/O=42/OU=42/CN=gmasid.42.fr/UID=gmasid"
 RUN mkdir -p /var/run/nginx
 COPY conf/nginx.conf /etc/nginx/nginx.conf
+RUN chmod 755 /var/www/html
+RUN chown -R www-data:www-data /var/www/html
+CMD [ "nginx", "-g", "daemon off;" ]
