--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,23 +1,27 @@
-server {
-  #SSL/TLS Configuration
-	listen 443 ssl;
-	ssl_protocols TLSv1.2 TLSv1.3;
-	ssl_certificate /etc/nginx/ssl/inception.crt;
-	ssl_certificate_key /etc/nginx/ssl/inception.key;
+events {}
 
-	#root and index and server_name
-	root /var/www/html;
-	server_name localhost;
-	index index.php index.html index.htm;
+http {
+  server {
+    #SSL/TLS Configuration
+    listen 443 ssl;
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_certificate /etc/nginx/ssl/inception.crt;
+    ssl_certificate_key /etc/nginx/ssl/inception.key;
 
-  location / {
-    try_files $uri $uri/ =404;
-  }
+    #root and index and server_name
+    root /var/www/html;
+    server_name localhost;
+    index index.php index.html index.htm;
 
-  # For all PHP request
-  location ~ \.php$ {
-  	include snippets/fastcgi-php.conf;
-  	fastcgi_pass wordpress:9000;
+    location / {
+      try_files $uri $uri/ =404;
+    }
+
+    # For all PHP request
+    # location ~ \.php$ {
+    #   include snippets/fastcgi-php.conf;
+    #   fastcgi_pass wordpress:9000;
+    # }
   }
 }
 
