copy content of file to server conf inside container

--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -2,3 +2,4 @@ FROM debian:buster
 RUN apt update -y
 RUN apt upgrade -y
 RUN apt install mariadb-server -y
+COPY conf/my.cnf	/etc/mysql/mariadb.conf.d/50-server.cnf
