--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -6,3 +6,8 @@ RUN wget https://wordpress.org/wordpress-6.0.tar.gz -P /var/www
 RUN cd /var/www && tar -xzf wordpress-6.0.tar.gz && rm wordpress-6.0.tar.gz
 RUN chown -R root:root /var/www/wordpress
 COPY ./conf/php.conf /etc/php/7.3/fpm/pool.d/www.conf
+RUN wget https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar
+RUN chmod +x wp-cli.phar
+RUN mv wp-cli.phar /usr/local/bin/wp
+COPY tools/auto_config.sh /auto_config.sh
+ENTRYPOINT ["bash", "auto_config.sh"]
