--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,6 +1,7 @@
 events {}
 
 http {
+  include /etc/nginx/mime.types;
   server {
     #SSL/TLS Configuration
     listen 443 ssl;
@@ -9,8 +10,8 @@ http {
     ssl_certificate_key /etc/nginx/ssl/inception.key;
 
     #root and index and server_name
-    root /var/www/html;
-    server_name localhost;
+    root /var/www/wordpress;
+    server_name gmasid.42.fr;
     index index.php index.html index.htm;
 
     location / {
@@ -18,10 +19,10 @@ http {
     }
 
     # For all PHP request
-    # location ~ \.php$ {
-    #   include snippets/fastcgi-php.conf;
-    #   fastcgi_pass wordpress:9000;
-    # }
+    location ~ \.php$ {
+      include snippets/fastcgi-php.conf;
+      fastcgi_pass wordpress:9000;
+    }
   }
 }
 
