--- a/srcs/.env
+++ b/srcs/.env
@@ -8,11 +8,11 @@ SQL_ROOT_PASSWORD=rootpass
 
 #wordpress configuration
 SITE_TITLE=inception
-ADMIN_USER=peguimasid
+ADMIN_USER=gmasid
 ADMIN_PASSWORD=123456
 ADMIN_EMAIL=guilhermomasid@gmail.com
 
 #other client
-USER1_LOGIN=gmasid
+USER1_LOGIN=peguimasid
 USER1_PASS=123456
 USER1_MAIL=gmasid123@gmail.com
