--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -23,8 +23,8 @@ services:
       context: requirements/mariadb
       dockerfile: Dockerfile
     env_file: .env
-    expose:
-      - "3306"
+    ports:
+      - "3306:3306"
     networks:
       - inception
     volumes:
@@ -44,8 +44,6 @@ services:
     volumes:
       - wordpress:/var/www/wordpress
     restart: always
-    expose:
-      - "9000"
 
 volumes:
   wordpress:
