make image has the same name of the service

--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3'
 
 services:
   nginx:
+    image: nginx
     container_name: nginx
     build:
       context: requirements/nginx
@@ -18,6 +19,7 @@ services:
     restart: always
 
   mariadb:
+    image: mariadb
     container_name: mariadb
     build:
       context: requirements/mariadb
@@ -32,6 +34,7 @@ services:
     restart: always
 
   wordpress:
+    image: wordpress
     container_name: wordpress
     build:
       context: requirements/wordpress
